--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
-<!DOCTYPE html%
-<html>
-    <head>
-<title>Jephthah Porfolio</title>
-    </head>
-<!--This is where most of our code will live-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Jephthah Portfolio</title>
+  <style>
+    .hero, .section {
+      margin-bottom: 20px;
+    }
+  </style>
+  <link href="style.css" rel="stylesheet" />
+</head>
 <body>
-    <h1>My website</h1>
-    <p>My name is Jephthah and I enjoy playing basketball, and read.</p>
-    <!--I learned about the <title></title> and the <a href> tags-->
+  <section id="home" class="hero">
+    <img src="https://i.pinimg.com/736x/ca/df/fd/cadffdd53951320707edf3c8dff63425.jpg" width="300" height="300" alt="Jephthah Frimpong" />
+    <h2>Hi, I am <span class="accent">Jephthah Frimpong</span></h2>
+    <p>I'm a high school student learning web development</p>
+  </section>
+
+  <section id="about" class="section">
+    <h2>About Me</h2>
+    <p>I currently live in the Bronx, NY. I attend Comp Sci High and I'm entering the 10th grade. I enjoy playing video games like NBA 2K, and I also like playing basketball in my free time. I learned coding during my 9th grade year. This is also my first time participating in SYEP.</p>
+  </section>
+
+  <section id="skills" class="section">
+    <h2>My skills</h2>
+    <div class="grid">
+      <div>HTML</div>
+      <div>CSS</div>
+      <div>JavaScript</div>
+    </div>
+  </section>
+
+  <footer>SYEP BOONE 2025 - CFFG</footer>
 </body>
-<footer> SYEP BOONE 2025 - CFFG</footer>
-</html>i
+</html>
