--- a/index.html
+++ b/index.html
@@ -9,8 +9,25 @@
       margin-bottom: 20px;
     }
   </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
   <link href="style.css" rel="stylesheet" />
 </head>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Jephthah </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+        <a class="nav-link" href="#about">About Me</a>
+        <a class="nav-link" href="#skills">My Skills</a>     
+        <a class="nav-link" hre
+      </div>
+    </div>
+  </div>
+</nav>
 <body>
   <section id="home" class="hero">
     <img src="https://i.pinimg.com/736x/ca/df/fd/cadffdd53951320707edf3c8dff63425.jpg" width="300" height="300" alt="Jephthah Frimpong" />
@@ -33,5 +50,6 @@
   </section>
 
   <footer>SYEP BOONE 2025 - CFFG</footer>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
 </html>
