--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jephthah Portfolio</title>
+ 
   <style>
     .hero, .section {
       margin-bottom: 20px;
@@ -14,7 +14,9 @@
 </head>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Jephthah </a>
+    <a class="navbar-brand" href="#">
+      <p id="greeting"></p>
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -34,7 +36,6 @@
     <h2>Hi, I am <span class="accent">Jephthah Frimpong</span></h2>
     <p>I'm a high school student learning web development</p>
   </section>
-
   <section id="about" class="section">
     <h2>About Me</h2>
     <p>I currently live in the Bronx, NY. I attend Comp Sci High and I'm entering the 10th grade. I enjoy playing video games like NBA 2K, and I also like playing basketball in my free time. I learned coding during my 9th grade year. This is also my first time participating in SYEP.</p>
@@ -51,5 +52,6 @@
 
   <footer>SYEP BOONE 2025 - CFFG</footer>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+ <script src = "script.js"></script>
 </body>
 </html>
