--- a/testimonials.html
+++ b/testimonials.html
@@ -10,10 +10,9 @@
     }
   </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-  <link href="style2.css" rel="stylesheet" />
+  <link href="style.css" rel="stylesheet" />
 </head>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
     <a class="navbar-brand" href="#">
       Jephthah F
     </a>
@@ -30,27 +29,31 @@
   </div>
 </nav>
 <body>
-  <section id="home" class="hero">
-    <img src="https://i.pinimg.com/736x/ca/df/fd/cadffdd53951320707edf3c8dff63425.jpg" width="300" height="300" alt="Jephthah Frimpong" />
-    <h2>Hi, I am <span class="accent">Jephthah Frimpong</span></h2>
-    <p>I'm a high school student learning web development</p>
-  </section>
-  <section id="about" class="section">
-    <h2>About Me</h2>
-    <p>I currently live in the Bronx, NY. I attend Comp Sci High and I'm entering the 10th grade. I enjoy playing video games like NBA 2K, and I also like playing basketball in my free time. I learned coding during my 9th grade year. This is also my first time participating in SYEP.</p>
-  </section>
+  <main>
+    <section class = "container">
+      <div class = "title">
+      <h2>Testimonials</h2>
+      </div>
+    </section>
+  </main>
 
-  <section id="skills" class="section">
-    <h2>My skills</h2>
-    <div class="grid">
-      <div>HTML</div>
-      <div>CSS</div>
-      <div>JavaScript</div>
-    </div>
-  </section>
+  <article class="review">
+    <div class = "img-container">
+      <img src="" />
 
+      <h4 id = "author>Insert Name Here"</h4>
+      <p id = "job">Insert Job Title</p>
+      <p id = "Info">Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor.</p>
+    
+      <div class = "button-container"></div>
+      <button class="">
+      <i class="fas ma-shev-left"></i>
+      </button>
+      <button class="next-btn">
+      <i class="fas fa-chevron-right"></i>
+      </button>
   <footer>SYEP BOONE 2025 - CFFG</footer>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
  <script src = "script.js"></script>
 </body>
-</html>
+</html> --> -->
